--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                             <h3 class="card-title">3D Kitchen Scene</h3>
                             <p class="card-text">A 3D kitchen scene application with enhanced features including scene graph management, frustum culling, and database integration.</p>
                             <div class="d-flex gap-2">
-                                <a href="artifacts/3d-kitchen-scene/original/SceneManager.cpp" class="btn btn-primary">Original Code</a>
-                                <a href="artifacts/3d-kitchen-scene/enhanced/" class="btn btn-success">Enhanced Code</a>
+                                <a href="/SceneManager.cpp" class="btn btn-primary">Original Code</a>
+                                <a href="/SceneManager.h" class="btn btn-success">Enhanced Code</a>
                             </div>
                         </div>
                     </div>
@@ -52,8 +52,8 @@
                             <h3 class="card-title">Mobile Trip Planner</h3>
                             <p class="card-text">A mobile trip planning application with enhanced features including offline support, API synchronization, and improved user experience.</p>
                             <div class="d-flex gap-2">
-                                <a href="artifacts/mobile-trip-planner/original/main.py" class="btn btn-primary">Original Code</a>
-                                <a href="artifacts/mobile-trip-planner/enhanced/" class="btn btn-success">Enhanced Code</a>
+                                <a href="/main.py" class="btn btn-primary">Original Code</a>
+                                <a href="/model.py" class="btn btn-success">Enhanced Code</a>
                             </div>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                         <div class="card-body">
                             <h3 class="card-title">Professional Self-Assessment</h3>
                             <p class="card-text">A comprehensive assessment of the development process and improvements made to both projects.</p>
-                            <a href="artifacts/Professional_Self_Assessment.md" class="btn btn-primary">View Assessment</a>
+                            <a href="/professional-self-assessment.md" class="btn btn-primary">View Assessment</a>
                         </div>
                     </div>
                 </div>
