--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="CS 499, ePortfolio, 3D Graphics, OpenGL, Computer Science, SNHU, Capstone">
     <meta name="author" content="Sujina Chand">
     <title>CS 499 Capstone ePortfolio - 3D Kitchen Scene Enhancement</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/atom-one-dark.min.css">
 </head>
