--- a/narratives.html
+++ b/narratives.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="3D graphics, OpenGL, software design, algorithms, databases, CS499, capstone">
     <meta name="author" content="Sujina Chand">
     <title>Artifact Narratives - CS 499 Capstone</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
