--- a/code-review.html
+++ b/code-review.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="CS 499, Code Review, 3D Graphics, OpenGL, Computer Science, SNHU">
     <meta name="author" content="Sujina Chand">
     <title>Code Review - CS 499 Capstone</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
