--- a/code-review.html
+++ b/code-review.html
@@ -9,6 +9,7 @@
     <title>Code Review - CS 499 Capstone</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- <script src="script.js"></script> -->
 </head>
 <body>
     <header role="banner">
