--- a/self-assesment.html
+++ b/self-assesment.html
@@ -7,8 +7,9 @@
     <meta name="keywords" content="self-assessment, computer science, 3D graphics, software development, CS499">
     <meta name="author" content="Sujina Chand">
     <title>Professional Self-Assessment - CS 499 Capstone</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!-- <script src="script.js"></script> -->
 </head>
 <body>
     <header role="banner">
