--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="CS 499 Capstone ePortfolio showcasing 3D Kitchen Scene Project enhancements in software design, algorithms, and databases">
     <meta name="keywords" content="CS 499, ePortfolio, 3D Graphics, OpenGL, Computer Science, SNHU, Capstone">
     <meta name="author" content="Sujina Chand">
-    <title>CS 499 Capstone ePortfolio </title>
+    <title>CS 499 Capstone ePortfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/atom-one-dark.min.css">
@@ -15,7 +15,7 @@
     <header role="banner">
         <div class="container">
             <h1>CS 499 Capstone ePortfolio</h1>
-            <p>Showcasing Computer Science Growth through the 3D Kitchen Scene/Mobile Trip Planner Project</p>
+            <p>Sujina Chand(3D Kitchen Scene Project/ Mobile Trip Planner) </p>
         </div>
     </header>
 
@@ -86,7 +86,7 @@
                 <p>My code review provides a comprehensive analysis of the 3D Kitchen Scene project, identifying areas for enhancement and demonstrating my understanding of software development best practices.</p>
                 
                 <div class="video-container" role="region" aria-label="Code review video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/MY_VIDEO_ID" title="Code Review" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://drive.google.com/file/d/1mvuUs5HnPxyEvQjgAiCv00v06--dLJNa/preview" width="560" height="315" allow="autoplay"></iframe>
                 </div>
 
                 <h3>Key Areas Addressed</h3>
