--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="CS 499 Capstone ePortfolio showcasing 3D Kitchen Scene Project enhancements in software design, algorithms, and databases">
+    <meta name="description" content="CS 499 Capstone ePortfolio showcasing 3D Kitchen Scene/Mobile Trip Planner Project enhancements in software design, algorithms, and databases">
     <meta name="keywords" content="CS 499, ePortfolio, 3D Graphics, OpenGL, Computer Science, SNHU, Capstone">
     <meta name="author" content="Sujina Chand">
     <title>CS 499 Capstone ePortfolio</title>
@@ -35,7 +35,7 @@
             <h2 id="professional-heading">Professional Self-Assessment</h2>
             <div class="assessment-content">
                 <h3>Program Journey and Growth</h3>
-                <p>Throughout my Computer Science program at Southern New Hampshire University, I have developed a comprehensive set of technical and professional skills that prepare me for a career in software development, with a particular focus on 3D graphics programming.</p>
+                <p>Throughout my Computer Science program at Southern New Hampshire University, I have developed a comprehensive set of technical and professional skills that prepare me for a career in software development, with a particular focus on graphics programming and mobile application.</p>
                 
                 <h3>Key Areas of Development</h3>
                 <div class="skills-grid">
@@ -61,7 +61,7 @@
                 </div>
 
                 <h3>Artifact Portfolio Overview</h3>
-                <p>My ePortfolio showcases the enhancement of the 3D Kitchen Scene project across three key areas:</p>
+                <p>My ePortfolio showcases the enhancement of the 3D Kitchen Scene/Mobile Trip Planner project across three key areas:</p>
                 <ul>
                     <li><strong>Software Design and Engineering:</strong> Implementation of a component-based architecture and advanced design patterns</li>
                     <li><strong>Algorithms and Data Structures:</strong> Development of spatial partitioning and optimization techniques</li>
@@ -71,7 +71,7 @@
                 <h3>Future Goals</h3>
                 <p>Looking forward, I aim to:</p>
                 <ul>
-                    <li>Specialize in 3D graphics programming and game development</li>
+                    <li>Specialize in 3D graphics programming and mobile development</li>
                     <li>Contribute to open-source graphics projects</li>
                     <li>Mentor junior developers in graphics programming</li>
                     <li>Stay current with emerging technologies in the field</li>
