--- a/code-review.html
+++ b/code-review.html
@@ -131,8 +131,7 @@
             <h2 id="video-heading">Code Review Video</h2>
             <div class="content">
                 <div class="video-container" role="region" aria-label="Code review video">
-                    <p>Video will be embedded here once created</p>
-                    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" title="Code Review" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+                    <iframe src="https://drive.google.com/file/d/1mvuUs5HnPxyEvQjgAiCv00v06--dLJNa/preview" width="560" height="315" allow="autoplay"></iframe>
                 </div>
             </div>
         </section>
